force-app/main/default/objects/Auth_Provider_User_Mapping__c/Auth_Provider_User_Mapping__c.object-meta.xml
<CustomObject>
    <description>Object to store the mapping between a Salesforce User and the external system&apos;s user Id referenced in the a custom Auth Provider.</description>
    <label>Auth Provider User Mapping</label>
    <nameField>
        <displayFormat>MAP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auth Provider User Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>