force-app/main/default/objects/Auth_Provider_User_Mapping__c/fields/Last_Auth_Provider_Log__c.field-meta.xml
<CustomField>
    <fullName>Last_Auth_Provider_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In case a log record has been created for this user/auth provider combination, link that last log record</description>
    <inlineHelpText>In case a log record has been created for this user/auth provider combination, link that last log record</inlineHelpText>
    <label>Last Auth Provider Log</label>
    <referenceTo>Auth_Provider_Log__c</referenceTo>
    <relationshipLabel>Auth Provider User Mapping</relationshipLabel>
    <relationshipName>Auth_Provider_User_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>