force-app/main/default/objects/Auth_Provider_User_Mapping__c/fields/Number_of_Logins__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Logins__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times this user logged in</description>
    <label>Number of Logins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>