force-app/main/default/objects/Auth_Provider_User_Mapping__c/fields/User_Id_Auth_Provider_Validation__c.field-meta.xml
<CustomField>
    <fullName>User_Id_Auth_Provider_Validation__c</fullName>
    <description>Validates that the combination of the local user Id and the Auth Provider Name is Unique. Each user should only have a single mapping to an Auth Provider.</description>
    <inlineHelpText>Validates that the combination of the local user Id and the Auth Provider Name is Unique. Each user should only have a single mapping to an Auth Provider.</inlineHelpText>
    <label>User Id Auth Provider Validation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>