force-app/main/default/objects/Auth_Provider_User_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Auth_Provider_Name__c</columns>
    <columns>Target_User_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>